# EffectiveModernCPP

./: CMakeLists.txt  README.md
Auto/: CMakeLists.txt  UnderstandingAuto.cpp  UnderstandingAuto.h
DeducingTypes/: CMakeLists.txt  DeclType.cpp  DeducingAuto.cpp  DeducingAuto.md  DeducingTypes.cpp  DeducingTypes.md  Main.cpp
Utilities/: functiondefs.h
